migrations: defined DB Schema

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <title><%= title %></title>
+    <title>
+      <%= title %>
+    </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>A certified dog walker hand picked for you! Let's do a quick match to see who is available!</p>
   </body>
+
 </html>
